--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <h2> Profissões do futuro</h2>
 <h3> Programador</h3>
 
+<p1>O programador é o profissional responsável por desenvolver, testar e manter sistemas, softwares e aplicações, criando soluções tecnológicas que atendem demandas empresariais e individuais. Sua função é propor recursos digitais, englobando desde aplicativos e sites até sistemas de gerenciamento. </p1>
 
 
 
